prevented profile pic displaying on mobile

--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ html {
 
 @keyframes moveIn {
   from {left: -300px; opacity: 0}
-  to   {left: 15%; opacity: 1}
+  to   {left: 12%; opacity: 1}
 }
 
 .landing-panel img {
@@ -118,6 +118,13 @@ html {
   width: 170px;
   height: auto;
   opacity: 0.7;
+}
+
+@media (max-width: 1200px) {
+  .landing-panel .profile-picture {
+    display: none;
+
+  }
 }
 
 
